<resources>
    <string name="app_name">Bagpacker</string>
    <string name="generate_list">Generera lista</string>
    <string name="get_list">Hämta lista</string>
    <string name="save_button">Spara</string>
    <string name="delete_btn">X</string>
    <string name="title">BAGPACKER</string>
    <string name="createTrip">Ny resa</string>
    <string name="myList">Min packlista</string>
    <string name="log">log</string>
    <string name="generate">Generera lista!</string>
    <string name="save_item">+</string>
    <string name="save_list">Spara lista</string>
    <string name="choose_activity">Välj aktivitet</string>
    <string name="what_you_wanna_do">Vad vill du göra?</string>
    <string name="set_length">Ange resans längd (i antal dagar)</string>
    <string name="how_long">Hur länge vill du vara borta?</string>
    <string name="set_destination">Ange resmål</string>
    <string name="where_to">Vart vill du åka?</string>
    <string name="load_from_save">Hämta sparad lista</string>
    <string name="delete_listItem">-</string>
    <string name="when_then">När ska du resa?</string>
    <string name="this_date">Ange datum (ÅÅ-MM-DD)</string>
    <string name="bullet">\u25CF</string>
    <string name="question_destination">Vart ska du resa?</string>
    <string name="question_date">Mellan vilka datum ska du resa?</string>
    <string name="question_transport">Hur ska du ta dig till ditt resmål?</string>
    <string name="question_accomodation">Hur ska du bo?</string>
    <string name="question_activity">Vilka aktiviteter planerar du?</string>
    <string name="car">Bil</string>
    <string name="train">Tåg</string>
    <string name="flight">Flyg</string>
    <string name="bus">Buss</string>
    <string name="bike">Cykel</string>
    <string name="motorbike">Motorcykel</string>
    <string name="hostel">Vandrarhem</string>
    <string name="boat">Båt</string>
    <string name="other">Annat</string>
    <string name="hotel">Hotell</string>
    <string name="withFriend">Hos kompisar</string>
    <string name="caravan">Husvagn</string>
    <string name="apartment">Lägenhet</string>
    <string name="tent">Tält</string>
    <string name="cottage">Stuga</string>
    <string name="hintPackingList">Min kod</string>
    <string name="textLogin">Logga in</string>
    <string name="next">Nästa</string>
    <string name="info">info</string>
    <string name="outdoor">Friluftsliv</string>
    <string name="wintersport">Vintersport</string>
    <string name="workout">Träning</string>
    <string name="beach">Sol och bad</string>
    <string name="sightseeing">Sightseeing</string>
    <string name="culture">Kultur</string>
    <string name="nightlife">Nattliv</string>

    <string-array name="categories">
        <item>Välj kategori</item>
        <item>kläder</item>
        <item>necessär</item>
        <item>resehandlingar</item>
        <item>elektronik</item>
        <item>specialutrustning</item>
        <item>till barnet</item>
        <item>övrigt</item>
    </string-array>
</resources>
