<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreateTripActivity"
    android:background="@color/screenBackground"
    >

    <TextView
        android:id="@+id/questionDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/where_to"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <EditText
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/set_destination"
        android:layout_margin="10dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/questionTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hur ska du resa?"
        android:textSize="18sp"
        android:layout_margin="10dp"/>
    <Spinner
        android:id="@+id/spinnerTransport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/questionAccommodation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hur ska du bo?"
        android:layout_margin="10dp"
        android:textSize="18sp" />
    <Spinner
        android:id="@+id/spinnerAccomodation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/questionActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/what_you_wanna_do"
        android:textSize="18sp"
        android:layout_margin="10dp"/>

    <Spinner
        android:id="@+id/spinnerActivities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/cardview_light_background"/>

    <TextView
        android:id="@+id/log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"
        android:layout_margin="10dp"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/generateNewList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            android:onClick="generateList"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>